# PasteX

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  README.en-US.md  README.ja-JP.md  README.md  README.zh-TW.md  RELEASE_NOTES.txt  index.html  package.json  pnpm-lock.yaml  private.key.pub  test_lan_sync.html  update.json
.github/CONTRIBUTING/: en-US.md  ja-JP.md  zh-CN.md  zh-TW.md
.github/ISSUE_TEMPLATE/: 01-bug.yml  11-bug.en-US.yml
.github/workflows/: release.yml
docs/: apk-realtime-sync-implementation.md  latest-upload-fetch-spec.md  realtime-remote-sync-dev.md
scripts/: buildIcon.ts  pad_image.ps1  renamePortable.ts
server/: DEPLOY.md  README.md  index.js  package-lock.json  package.json
server/public/: dashboard.html  index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/setup/: macos.rs  mod.rs
src-tauri/src/plugins/: clipboard_source.rs  lan.rs  mod.rs
src-tauri/src/plugins/autostart/: Cargo.toml
src-tauri/src/plugins/autostart/src/: lib.rs
src-tauri/src/plugins/paste/: Cargo.toml
src-tauri/src/plugins/paste/src/: lib.rs
src-tauri/src/plugins/paste/src/commands/: linux.rs  macos.rs  windows.rs
src-tauri/src/plugins/window/: Cargo.toml
src-tauri/src/plugins/window/src/: lib.rs
src-tauri/src/plugins/window/src/commands/: mod.rs
src/assets/css/: global.scss
src/components/LocalImage/: index.tsx
src/components/ProListItem/: index.tsx
src/components/ProSwitch/: index.tsx
src/components/SafeHtml/: index.tsx
src/components/SourceAppIcon/: index.tsx
src/components/UpdateApp/: index.tsx
src/constants/: index.ts
src/database/: history.ts  index.ts
src/hooks/: useClipboard.ts  useContextMenu.tsx  useEdgeAutoHide.ts  useHistoryList.ts  useRegister.ts  useSync.ts  useTauriFocus.ts  useTray.ts  useWindowState.ts
src/locales/: en-US.json  ja-JP.json  zh-CN.json  zh-TW.json
src/pages/LinkOpenPrompt/: index.tsx
src/pages/Main/: index.tsx
src/pages/Main/components/AdvancedFilter/: index.tsx
src/pages/Main/components/DateFilter/: index.tsx
src/pages/Preference/: index.tsx
src/plugins/: audio.ts  autostart.ts  clipboard.ts  edgeAutoHide.ts  linkPrompt.ts  paste.ts  window.ts
src/router/: index.ts
src/stores/: clipboard.ts  global.ts  syncState.ts
src/types/: database.d.ts  store.d.ts
src/utils/: contentRules.ts  edgeAutoHide.ts  internalClipboard.ts  is.ts  latestSource.ts  monitor.ts  path.ts  store.ts  tags.ts  url.ts
(+27 files in other folders)
