[package]
name = "PasteX"
version = "3.0.0"
description = "一款开源的跨平台剪贴板管理工具"
homepage = "https://github.com/yixing233/PasteX"
repository = "https://github.com/yixing233/PasteX.git"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "paste_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["tray-icon", "protocol-asset", "macos-private-api", "image-ico"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"   
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-macos-permissions = "2"
tauri-plugin-locale = "2"
tauri-plugin-opener = "2"
tauri-plugin-prevent-default = "1"
tauri-plugin-clipboard-x = "2"
tauri-plugin-fs-pro.workspace = true
tauri-plugin-pastex-window.workspace = true
tauri-plugin-pastex-paste.workspace = true
tauri-plugin-pastex-autostart.workspace = true
active-win-pos-rs = "0.9.1"
open = "5"
rodio = "0.17.3"
warp = "0.3"
local-ip-address = "0.5"
arboard = "3"
tokio = { version = "1", features = ["full"] }

[target."cfg(target_os = \"macos\")".dependencies]
tauri-nspanel.workspace = true

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_DataExchange",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }

[features]
cargo-clippy = []
